Fixed bug #47002 (Field truncation when reading from dbase dbs with more then 1024 fields)